--- a/static/index.html
+++ b/static/index.html
@@ -23,15 +23,15 @@
                 <span class="text-lg font-bold">OpenAgents</span>
             </div>
             <div class="mt-4">
-                <nav>
-                    <ul class="flex flex-row space-x-2 justify-between" id="nav-buttons">
+                <nav class="flex justify-center">
+                    <ul class="flex flex-row items-center justify-center gap-4 flex-wrap" id="nav-buttons">
                     </ul>
                 </nav>
             </div>
         </header>
 
         <template id="button-template">
-            <a class="btn-nav bg-black hover:bg-gray-900 text-white font-mono text-xs py-2 px-4 border border-white inline-flex items-center whitespace-nowrap" href="{{href}}"><i class="nav-active-icon mr-2"></i>{{text}}</a>
+            <a class="btn-nav bg-black hover:bg-gray-900 text-white font-mono text-xs py-2 px-4 border border-white inline-flex items-center justify-center whitespace-nowrap" href="{{href}}"><i class="nav-active-icon mr-2"></i>{{text}}</a>
         </template>
     </div>
 
@@ -50,7 +50,7 @@
 
         buttons.forEach(button => {
             const li = document.createElement('li');
-            li.className = "flex-1";
+            li.className = "flex-1 flex justify-center";
             li.innerHTML = Mustache.render(template, button);
             navButtons.appendChild(li);
         });
