--- a/static/agents.html
+++ b/static/agents.html
@@ -10,8 +10,7 @@
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com/agents"/>
-    <link rel="stylesheet" href="css/new.css"/>
-    <link rel="stylesheet" href="css/chat.css"/>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/htmx.min.js"></script>
     <script src="js/client-side-templates.js"></script>
     <script src="js/mustache.js"></script>
@@ -104,105 +103,119 @@
     </style>
 </head>
 
-<body>
-    <div class="header">
-        <div style="font-size:1.5em">Agent Management</div>
-        <p style="margin: 10px 0 0 0">Create and manage your AI agents</p>
-    </div>
-
-    <div class="container">
-        <div class="column">
-            <!-- Agent Creation Form -->
-            <div class="agent-form">
-                <h2>Create New Agent</h2>
-                <form id="create-agent-form"
-                      hx-ext="nostr-agent"
-                      nostr-action="create"
-                      hx-on="submit: event.preventDefault()">
-                    <div class="form-group">
-                        <label for="agent-name">Agent Name</label>
-                        <input type="text" id="agent-name" name="name" required 
-                               placeholder="Market Analysis Agent">
-                    </div>
-                    <div class="form-group">
-                        <label for="agent-description">Description</label>
-                        <textarea id="agent-description" name="description" required
-                                  placeholder="Describe what this agent does..."></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="agent-config">Configuration (JSON)</label>
-                        <textarea id="agent-config" name="config" required
-                                  placeholder='{"version": "1.0.0", "capabilities": []}'></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="memory-limit">Memory Limit (MB)</label>
-                        <input type="number" id="memory-limit" name="memory_limit" 
-                               value="128" min="32" max="1024">
-                    </div>
-                    <div class="form-group">
-                        <label for="cpu-limit">CPU Limit (ms)</label>
-                        <input type="number" id="cpu-limit" name="cpu_limit" 
-                               value="1000" min="100" max="10000">
-                    </div>
-                    <button type="submit">Create Agent</button>
-                </form>
+<body class="bg-black text-white font-mono min-h-screen">
+    <div class="container mx-auto max-w-[60rem] px-4">
+        <header class="py-5 border-b border-zinc-800 mb-5">
+            <div class="flex justify-between items-center">
+                <div>
+                    <div class="text-xs font-bold">OpenAgents, Inc.</div>
+                    <p class="text-xs mt-2">Create and manage your AI agents</p>
+                </div>
+                <nav>
+                    <ul class="flex space-x-6" id="nav-buttons">
+                    </ul>
+                </nav>
             </div>
-        </div>
+        </header>
 
-        <div class="column">
-            <!-- Agent List -->
-            <div class="agent-list">
-                <h2>Your Agents</h2>
-                <div id="agent-items"
-                     hx-ext="nostr-agent"
-                     nostr-subscribe="true"
-                     nostr-kinds="[30001, 30004]">
-                    <!-- Agent items will be inserted here -->
+        <template id="button-template">
+            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none mr-4 px-6" href="{{href}}"></i>{{text}}</a>
+        </template>
+
+        <div class="container">
+            <div class="column">
+                <!-- Agent Creation Form -->
+                <div class="agent-form">
+                    <h2>Create New Agent</h2>
+                    <form id="create-agent-form"
+                          hx-ext="nostr-agent"
+                          nostr-action="create"
+                          hx-on="submit: event.preventDefault()">
+                        <div class="form-group">
+                            <label for="agent-name">Agent Name</label>
+                            <input type="text" id="agent-name" name="name" required 
+                                   placeholder="Market Analysis Agent">
+                        </div>
+                        <div class="form-group">
+                            <label for="agent-description">Description</label>
+                            <textarea id="agent-description" name="description" required
+                                      placeholder="Describe what this agent does..."></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="agent-config">Configuration (JSON)</label>
+                            <textarea id="agent-config" name="config" required
+                                      placeholder='{"version": "1.0.0", "capabilities": []}'></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="memory-limit">Memory Limit (MB)</label>
+                            <input type="number" id="memory-limit" name="memory_limit" 
+                                   value="128" min="32" max="1024">
+                        </div>
+                        <div class="form-group">
+                            <label for="cpu-limit">CPU Limit (ms)</label>
+                            <input type="number" id="cpu-limit" name="cpu_limit" 
+                                   value="1000" min="100" max="10000">
+                        </div>
+                        <button type="submit">Create Agent</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="column">
+                <!-- Agent List -->
+                <div class="agent-list">
+                    <h2>Your Agents</h2>
+                    <div id="agent-items"
+                         hx-ext="nostr-agent"
+                         nostr-subscribe="true"
+                         nostr-kinds="[30001, 30004]">
+                        <!-- Agent items will be inserted here -->
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- Agent Item Template -->
+        <template id="agent-item-template">
+            <div class="agent-item" data-agent-id="{{id}}">
+                <h3>{{name}}</h3>
+                <p>{{description}}</p>
+                <div class="agent-status">
+                    Status: <span class="status-badge {{status}}">{{status}}</span>
+                </div>
+                <div class="agent-metrics">
+                    <div>Memory: {{memory_usage}}MB / {{memory_limit}}MB</div>
+                    <div>CPU: {{cpu_usage}}ms / {{cpu_limit}}ms</div>
+                </div>
+                <div class="agent-actions">
+                    <button nostr-action="start" data-agent-id="{{id}}">Start</button>
+                    <button nostr-action="stop" data-agent-id="{{id}}">Stop</button>
+                    <button nostr-action="delete" data-agent-id="{{id}}" 
+                            class="danger">Delete</button>
+                </div>
+            </div>
+        </template>
+
+        <script>
+            // Initialize NostrAgent when the page loads
+            document.addEventListener('DOMContentLoaded', () => {
+                window.nostrAgent = new NostrAgent()
+
+                // Listen for agent events
+                document.addEventListener('agent:created', (e) => {
+                    console.log('Agent created:', e.detail)
+                })
+
+                document.addEventListener('instance:updated', (e) => {
+                    console.log('Instance updated:', e.detail)
+                })
+
+                document.addEventListener('nostr-agent:error', (e) => {
+                    console.error('Nostr agent error:', e.detail)
+                    alert(e.detail.message)
+                })
+            })
+        </script>
     </div>
-
-    <!-- Agent Item Template -->
-    <template id="agent-item-template">
-        <div class="agent-item" data-agent-id="{{id}}">
-            <h3>{{name}}</h3>
-            <p>{{description}}</p>
-            <div class="agent-status">
-                Status: <span class="status-badge {{status}}">{{status}}</span>
-            </div>
-            <div class="agent-metrics">
-                <div>Memory: {{memory_usage}}MB / {{memory_limit}}MB</div>
-                <div>CPU: {{cpu_usage}}ms / {{cpu_limit}}ms</div>
-            </div>
-            <div class="agent-actions">
-                <button nostr-action="start" data-agent-id="{{id}}">Start</button>
-                <button nostr-action="stop" data-agent-id="{{id}}">Stop</button>
-                <button nostr-action="delete" data-agent-id="{{id}}" 
-                        class="danger">Delete</button>
-            </div>
-        </div>
-    </template>
-
-    <script>
-        // Initialize NostrAgent when the page loads
-        document.addEventListener('DOMContentLoaded', () => {
-            window.nostrAgent = new NostrAgent()
-
-            // Listen for agent events
-            document.addEventListener('agent:created', (e) => {
-                console.log('Agent created:', e.detail)
-            })
-
-            document.addEventListener('instance:updated', (e) => {
-                console.log('Instance updated:', e.detail)
-            })
-
-            document.addEventListener('nostr-agent:error', (e) => {
-                console.error('Nostr agent error:', e.detail)
-                alert(e.detail.message)
-            })
-        })
-    </script>
 </body>
 </html>
