Standardize HTMX/Mustache front end components with Tailwind CSS
Standardize HTMX/Mustache front end components, add Tailwind, and maximize reusability.

* **Button Component**
  - Add Tailwind CSS classes to the button template in `static/templates/button.mustache`.

* **Agents Page**
  - Replace inline styles with Tailwind CSS classes in `static/agents.html`.
  - Update the agent creation form to use the new textinput Mustache component.

* **Index Page**
  - Replace inline styles with Tailwind CSS classes in `static/index.html`.

* **Video Series Page**
  - Replace inline styles with Tailwind CSS classes in `static/video-series.html`.

* **Textinput Component**
  - Create a new Mustache component for textinput with Tailwind CSS classes in `static/templates/textinput.mustache`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/OpenAgentsInc/openagents/tree/newhome?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/static/agents.html
+++ b/static/agents.html
@@ -10,6 +10,7 @@
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com/agents"/>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/new.css"/>
     <link rel="stylesheet" href="css/chat.css"/>
     <script src="js/htmx.min.js"></script>
@@ -104,47 +105,54 @@
     </style>
 </head>
 
-<body>
-    <div class="header">
-        <div style="font-size:1.5em">Agent Management</div>
-        <p style="margin: 10px 0 0 0">Create and manage your AI agents</p>
+<body class="bg-black text-white font-mono min-h-screen">
+    <div class="header py-5 border-b border-zinc-800 mb-5">
+        <div class="text-2xl">Agent Management</div>
+        <p class="mt-2">Create and manage your AI agents</p>
     </div>
 
-    <div class="container">
+    <div class="container mx-auto max-w-[60rem] px-4">
         <div class="column">
             <!-- Agent Creation Form -->
             <div class="agent-form">
-                <h2>Create New Agent</h2>
+                <h2 class="text-xl font-bold mb-4">Create New Agent</h2>
                 <form id="create-agent-form"
                       hx-ext="nostr-agent"
                       nostr-action="create"
                       hx-on="submit: event.preventDefault()">
-                    <div class="form-group">
-                        <label for="agent-name">Agent Name</label>
-                        <input type="text" id="agent-name" name="name" required 
-                               placeholder="Market Analysis Agent">
+                    <div class="form-group mb-4">
+                        <label for="agent-name" class="block text-sm font-medium text-gray-700">Agent Name</label>
+                        <div hx-get="/templates/textinput.mustache"
+                             hx-trigger="load"
+                             hx-target="#agent-name-container">
+                        </div>
+                        <div id="agent-name-container"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="agent-description">Description</label>
+                    <div class="form-group mb-4">
+                        <label for="agent-description" class="block text-sm font-medium text-gray-700">Description</label>
                         <textarea id="agent-description" name="description" required
+                                  class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                                   placeholder="Describe what this agent does..."></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="agent-config">Configuration (JSON)</label>
+                    <div class="form-group mb-4">
+                        <label for="agent-config" class="block text-sm font-medium text-gray-700">Configuration (JSON)</label>
                         <textarea id="agent-config" name="config" required
+                                  class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                                   placeholder='{"version": "1.0.0", "capabilities": []}'></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="memory-limit">Memory Limit (MB)</label>
+                    <div class="form-group mb-4">
+                        <label for="memory-limit" class="block text-sm font-medium text-gray-700">Memory Limit (MB)</label>
                         <input type="number" id="memory-limit" name="memory_limit" 
+                               class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                                value="128" min="32" max="1024">
                     </div>
-                    <div class="form-group">
-                        <label for="cpu-limit">CPU Limit (ms)</label>
+                    <div class="form-group mb-4">
+                        <label for="cpu-limit" class="block text-sm font-medium text-gray-700">CPU Limit (ms)</label>
                         <input type="number" id="cpu-limit" name="cpu_limit" 
+                               class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                                value="1000" min="100" max="10000">
                     </div>
-                    <button type="submit">Create Agent</button>
+                    <button type="submit" class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6">Create Agent</button>
                 </form>
             </div>
         </div>
@@ -152,7 +160,7 @@
         <div class="column">
             <!-- Agent List -->
             <div class="agent-list">
-                <h2>Your Agents</h2>
+                <h2 class="text-xl font-bold mb-4">Your Agents</h2>
                 <div id="agent-items"
                      hx-ext="nostr-agent"
                      nostr-subscribe="true"
@@ -165,21 +173,20 @@
 
     <!-- Agent Item Template -->
     <template id="agent-item-template">
-        <div class="agent-item" data-agent-id="{{id}}">
-            <h3>{{name}}</h3>
-            <p>{{description}}</p>
-            <div class="agent-status">
+        <div class="agent-item border border-gray-300 rounded-lg p-4 mb-4" data-agent-id="{{id}}">
+            <h3 class="text-lg font-bold mb-2">{{name}}</h3>
+            <p class="text-sm text-gray-700 mb-2">{{description}}</p>
+            <div class="agent-status mb-2">
                 Status: <span class="status-badge {{status}}">{{status}}</span>
             </div>
-            <div class="agent-metrics">
+            <div class="agent-metrics text-sm text-gray-600 mb-2">
                 <div>Memory: {{memory_usage}}MB / {{memory_limit}}MB</div>
                 <div>CPU: {{cpu_usage}}ms / {{cpu_limit}}ms</div>
             </div>
             <div class="agent-actions">
-                <button nostr-action="start" data-agent-id="{{id}}">Start</button>
-                <button nostr-action="stop" data-agent-id="{{id}}">Stop</button>
-                <button nostr-action="delete" data-agent-id="{{id}}" 
-                        class="danger">Delete</button>
+                <button nostr-action="start" data-agent-id="{{id}}" class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6">Start</button>
+                <button nostr-action="stop" data-agent-id="{{id}}" class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6">Stop</button>
+                <button nostr-action="delete" data-agent-id="{{id}}" class="btn-nav bg-red-600 hover:bg-red-700 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6">Delete</button>
             </div>
         </div>
     </template>
