--- a/static/video-series.html
+++ b/static/video-series.html
@@ -22,7 +22,7 @@
         </div>
 
         <template id="button-template">
-            <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6" href="{{href}}">{{text}}</a>
+            {{> button}}
         </template>
 
         <div id="videos" 
