--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
     <script src="js/client-side-templates.js"></script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
+<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
     <div class="container mx-auto" hx-ext="client-side-templates">
         <div hx-get="/templates/header.json"
              hx-trigger="load"
