--- a/static/mobile-app.html
+++ b/static/mobile-app.html
@@ -13,7 +13,7 @@
     <script src="js/mustache.js"></script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
+<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
     <div class="header-container" hx-ext="client-side-templates">
         <div hx-get="/templates/header.json"
              hx-trigger="load"
