--- a/static/business.html
+++ b/static/business.html
@@ -13,11 +13,13 @@
     <script src="js/mustache.js"></script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
+<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
     <div class="container mx-auto" hx-ext="client-side-templates">
-        <div hx-get="/templates/header.json"
+        <div id="header-container"
+             hx-get="/templates/header.json"
              hx-trigger="load"
-             mustache-template="header-template">
+             mustache-template="header-template"
+             hx-preserve="true">
         </div>
 
         <template id="header-template">
@@ -31,7 +33,10 @@
                             {{#buttons}}
                             <li class="flex justify-center mb-1">
                                 <a class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 border border-white" 
-                                   href="{{href}}">{{text}}</a>
+                                   href="{{href}}"
+                                   hx-boost="true"
+                                   hx-target="body"
+                                   hx-swap="innerHTML">{{text}}</a>
                             </li>
                             {{/buttons}}
                         </ul>
@@ -40,12 +45,23 @@
             </header>
         </template>
 
-        <div class="content">
+        <div id="content">
             <h1 class="text-3xl font-bold mb-4">Business Services</h1>
             <p class="mb-4">Welcome to our Business Services page. Here you can find information about the various services we offer to help your business grow and succeed.</p>
             <p class="mb-4">Our team of experts is dedicated to providing top-notch services tailored to meet your specific needs. Whether you are looking for consulting, software development, or marketing solutions, we have you covered.</p>
             <p class="mb-4">Contact us today to learn more about how we can assist you in achieving your business goals.</p>
         </div>
     </div>
+
+    <script>
+        document.body.addEventListener('htmx:afterSwap', function(evt) {
+            if (evt.detail.target === document.body) {
+                const header = document.querySelector('#header-container');
+                if (header) {
+                    evt.detail.shouldSwap = false;
+                }
+            }
+        });
+    </script>
 </body>
 </html>
