--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,6 @@
                                    hx-boost="true"
                                    hx-push-url="true"
                                    hx-target="body"
-                                   hx-scroll="false"
                                    hx-swap="innerHTML">{{text}}</a>
                             </li>
                             {{/buttons}}
@@ -57,6 +56,14 @@
     </div>
 
     <script>
+        // Prevent scroll on navigation
+        document.body.addEventListener('htmx:beforeSwap', function(evt) {
+            if (evt.detail.target === document.body) {
+                evt.detail.shouldScroll = false;
+            }
+        });
+
+        // Preserve header state
         document.body.addEventListener('htmx:afterSwap', function(evt) {
             if (evt.detail.target === document.body) {
                 const header = document.querySelector('#header-container');
@@ -64,6 +71,17 @@
                     evt.detail.shouldSwap = false;
                 }
             }
+        });
+
+        // Store scroll position
+        let lastScrollPosition = 0;
+        document.body.addEventListener('htmx:beforeRequest', function(evt) {
+            lastScrollPosition = window.scrollY;
+        });
+
+        // Restore scroll position
+        document.body.addEventListener('htmx:afterRequest', function(evt) {
+            window.scrollTo(0, lastScrollPosition);
         });
     </script>
 </body>
