--- a/static/video-series.html
+++ b/static/video-series.html
@@ -15,7 +15,7 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
+<body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
     <div class="container mx-auto" hx-ext="client-side-templates">
         <div id="header-container"
              hx-get="/templates/header.json"
