refactor: Update body class and add hx-boost attribute for improved page loading

--- a/static/nostr.html
+++ b/static/nostr.html
@@ -16,7 +16,7 @@
   </script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
+<body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
   <div hx-ext="client-side-templates">
     <div hx-get="/templates/header.json"
          hx-trigger="load"
