--- a/static/contact.html
+++ b/static/contact.html
@@ -13,14 +13,8 @@
     <script src="js/mustache.js"></script>
 </head>
 
-<body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
-    <div class="container mx-auto" hx-ext="client-side-templates">
-        <div id="header-container"
-             hx-get="/templates/header.json"
-             hx-trigger="load"
-             mustache-template="header-template"
-             hx-preserve="true">
-        </div>
+<body class="bg-black text-white font-mono max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto" hx-boost="true">
+    <div class="container mx-auto">
 
         <template id="header-template">
             <header class="py-2 mb-5">
