--- a/static/index.html
+++ b/static/index.html
@@ -18,8 +18,9 @@
 </head>
 
 <body class="bg-black text-white font-mono min-h-screen max-w-[60rem] sm:border sm:border-white leading-6 mt-8 mb-8 py-2 px-4 pb-1 mx-auto">
-    <div class="container mx-auto" hx-ext="client-side-templates">
-        <div id="header-container"
+    <div class="container mx-auto">
+        <div id="header-container" 
+             hx-ext="client-side-templates"
              hx-get="/templates/header.json"
              hx-trigger="load"
              mustache-template="header-template"
@@ -42,7 +43,7 @@
                                    hx-push-url="true"
                                    hx-target="#content"
                                    hx-select="#content"
-                                   hx-swap="innerHTML">{{text}}</a>
+                                   hx-swap="innerHTML show:top">{{text}}</a>
                             </li>
                             {{/buttons}}
                         </ul>
@@ -52,13 +53,24 @@
         </template>
 
         <div id="content">
-            <!-- Page content will be loaded here -->
+            <div class="prose prose-invert max-w-none">
+                <h1>Welcome to OpenAgents</h1>
+                <p>Software to increase human agency.</p>
+            </div>
         </div>
     </div>
 
     <script>
         document.body.addEventListener('htmx:afterSwap', function(evt) {
             window.scrollTo(0, 0);
+        });
+
+        // Prevent template processing on subsequent navigation
+        document.body.addEventListener('htmx:beforeSwap', function(evt) {
+            if (evt.detail.target.id === 'content') {
+                evt.detail.shouldSwap = true;
+                evt.detail.isError = false;
+            }
         });
     </script>
 </body>
